package ch.uzh.ifi.seal.soprafs20.constant;

public enum BuildingType {
    ROAD,
    SETTLEMENT,
    CITY
}
