package ch.uzh.ifi.seal.soprafs20.constant;

public enum DevelopmentType {

    KNIGHT,
    ROADPROGRESS,
    PLENTYPROGRESS,
    MONOPOLYPROGRESS,
    VICTORYPOINT
}
