package ch.uzh.ifi.seal.soprafs20.constant;

public enum ResourceType {

    BRICK,
    WOOD,
    STONE,
    WHEAT,
    SHEEP
}
