package ch.uzh.ifi.seal.soprafs20.constant;

public enum TileType {
    DESERT,
    FIELD,
    FOREST,
    HILL,
    MOUNTAIN,
    PASTURE
}
