@startuml



enum BuildingType {
ROAD
SETTLEMENT
CITY
}

enum TileType{
DESERT
FIELD
FOREST
HILL
MOUNTAIN
PASTURE
}

enum ResourceType{
BRICK
WOOD
STONE
WHEAT
SHEEP
}

enum DevelopmentType{
KNIGHT
ROADPROGRESS
PLENTYPROGRESS
MONOPOLYPROGRESS
VICTORYPOINT
}

enum LocationType{
EDGE
VERTEX

}

interface Building{
int coords;
BuildingType buildingtype;
int victoryPoints;
}

class City
class Settlement
class Road


class Dice{
roll()
}


class Player{

String name;
int age;
int victoryPoints;
ArrayList<Card>;
ArrayList<Road>
ArrayList<City>
ArrayList<Settlement>
getResources()
giveResources()
build()
buyDevelopmentCard()
playDevelopmentCard()
passTurn()
}


class Robber{
currentTile;
move()
drawCard()
}




interface Card{

}


class ResourceCard{
ResourceType resourceType;
}

class DevelopementCard{
DevelopmentType developmentType;
}

class Bank{
trade()
}


class Board{

ArrayList<Tile>;

createBoard()
update()

}

class Tile{
int number;
TileType tileType;
ArrayList<Coordinates>;

getCoordinates()

}

class Coordinates{
int x;
int y;
ArrayList<Coordinates> adjacents;

getCoordinates()
getAdjacents()

}

note "<b>main class</b>" as N1
class Game

N1 -down- Game

Game -down-> Board
Game -left-> Player


Building <|.. City
Building <|.. Settlement
Building <|.. Road

BuildingType <-left- Building
TileType <-up- Tile

Player --> Card
Card <|.. ResourceCard
Card <|.. DevelopementCard
ResourceType <-down- ResourceCard
DevelopmentType <-down- DevelopementCard

Bank -down- Player
Dice -up- Player
Player -left-> Building


Board o-right- Tile
Board o-down- Robber
Robber . Tile
Tile *-- Coordinates
Player .. Board

LocationType <-down- Coordinates

@enduml